# cloak

./: .gitignore  Cargo.toml  LICENSE.md  readme.md
src/: filesystem.rs  filter.rs  main.rs  matcher.rs  search.rs  watcher.rs
