[package]
name = "cloak"
version = "0.3.0"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
clap = { version = "4.5.1", features = ["derive", "wrap_help"] }
globset = "0.4.14"
jwalk = "0.8.1"
notify = "6.1.1"
rayon = "1.9.0"
regex = "1.10.3"
winapi = "0.3.9"

